[package]
name = "cvss-score-sage"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0"
reqwest = { version = "0.11", features = ["json", "stream","blocking", "rustls-tls" ] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
simplelog = "0.10"
cvss = { version = "2", features = ["serde"] }
serde_json = "1.0"
serde_derive = "1.0"
csv = "1.1"
anyhow = "1.0"